Update and rename studio1.html to index.html

--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
 </head>
 <body>
     <div class="menu-container">
-        <h1>Arcade Sound Studio</h1>
-        <a href="#recording" class="menu-item">Recording</a>
-        <a href="#mixing" class="menu-item">Mixing</a>
-        <a href="#mastering" class="menu-item">Mastering</a>
-        <a href="#contact" class="menu-item">Contact</a>
+        <h1>Sound Synths</h1>
+        <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth">Game Synth</a>
+        <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth">Drone Synth</a>
+        <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth">Cloud Synth</a>
         <div class="glow-effect"></div>
     </div>
 </body>
