--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth">Game Synth</a>
         <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth">Drone Synth</a>
         <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth">Cloud Synth</a>
+        <a href="http://soundsynths.netlify.app/808AI.html" title="808AI Synth">808AI Synth</a>
         <div class="glow-effect"></div>
     </div>
 </body>
