--- a/index.html
+++ b/index.html
@@ -2,54 +2,120 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Studio Menu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Sound Synths - Retro-inspired synthesizer menu with neon glow effects">
+    <meta name="keywords" content="synthesizers, music, retro, arcade, sound design">
+    <meta name="author" content="SoundSynths">
+    <title>Sound Synths Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
-        body {
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
-            background: #000;
+        }
+
+        body {
+            background: #1a1a2e;
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Press Start 2P', monospace;
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        /* Sound Wave Background */
+        .soundwave-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, #1a1a2e 0%, #16213e 100%);
+            z-index: -2;
+            overflow: hidden;
+        }
+
+        .soundwave-bg::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20"><path d="M0 10 Q25 0 50 10 T100 10" stroke="rgba(255, 0, 255, 0.2)" stroke-width="2" fill="none"/></svg>') repeat-x;
+            background-size: 100px 20px;
+            animation: wave 4s linear infinite;
+            opacity: 0.5;
+        }
+
+        @keyframes wave {
+            0% { background-position: 0 0; }
+            100% { background-position: 100px 0; }
         }
 
         .menu-container {
             position: relative;
             width: 90%;
-            max-width: 320px;
+            max-width: 400px;
             perspective: 1000px;
+            z-index: 1;
+            text-align: center;
         }
 
+        /* 3D Glowing Logo */
+        h1 {
+            color: #ff00ff;
+            font-size: 2.5em;
+            text-transform: uppercase;
+            text-shadow: 
+                0 0 10px #ff00ff,
+                0 0 20px #00ffff,
+                0 0 30px #ff00ff;
+            margin-bottom: 40px;
+            transform: translateZ(20px);
+            animation: flicker 4s infinite;
+        }
+
+        @keyframes flicker {
+            0%, 19.9%, 22%, 62.9%, 64%, 64.9%, 70%, 100% { opacity: 1; }
+            20%, 21.9%, 63%, 63.9%, 65%, 69.9% { opacity: 0.6; }
+        }
+
+        /* Menu Items */
         .menu-item {
             position: relative;
-            margin: 20px 0;
+            margin: 15px 0;
             padding: 20px;
             background: rgba(255, 255, 255, 0.05);
-            border: 2px solid #fff;
-            border-radius: 10px;
+            border: 2px solid #00ffff;
+            border-radius: 8px;
             text-align: center;
             text-transform: uppercase;
-            color: #fff;
-            font-size: 1.2em;
+            color: #00ffff;
+            font-size: 1.1em;
             font-weight: bold;
             text-decoration: none;
             display: block;
             transform-style: preserve-3d;
             transition: all 0.3s ease;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2),
-                       0 0 40px rgba(255, 255, 255, 0.1);
+            box-shadow: 
+                0 0 15px rgba(0, 255, 255, 0.3),
+                0 0 30px rgba(0, 255, 255, 0.2);
         }
 
         .menu-item:hover {
             transform: translateZ(20px) rotateX(5deg);
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.4),
-                       0 0 60px rgba(255, 255, 255, 0.2);
-            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 
+                0 0 30px rgba(255, 0, 255, 0.5),
+                0 0 60px rgba(0, 255, 255, 0.3);
+            background: rgba(255, 0, 255, 0.1);
+            color: #ff00ff;
+            border-color: #ff00ff;
         }
 
+        /* Glow Effect */
         .glow-effect {
             position: absolute;
             top: 50%;
@@ -57,39 +123,74 @@
             transform: translate(-50%, -50%);
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(0,0,0,1) 70%);
+            background: radial-gradient(circle, rgba(255, 0, 255, 0.1) 0%, rgba(0, 0, 0, 1) 70%);
             z-index: -1;
             pointer-events: none;
         }
 
-        h1 {
-            color: #fff;
+        /* Footer */
+        footer {
+            position: relative;
+            margin-top: 40px;
+            padding: 20px;
+            width: 100%;
             text-align: center;
-            font-size: 2em;
-            text-transform: uppercase;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            margin-bottom: 40px;
+            color: #00ffff;
+            font-size: 0.9em;
+            text-shadow: 0 0 10px #00ffff;
         }
 
+        footer p {
+            margin: 0;
+        }
+
+        /* Mobile Optimization */
         @media (max-width: 768px) {
+            h1 {
+                font-size: 1.8em;
+                margin-bottom: 30px;
+            }
             .menu-item {
-                font-size: 1em;
+                font-size: 0.9em;
+                padding: 15px;
+                margin: 10px 0;
+            }
+            .menu-container {
+                max-width: 90%;
+            }
+            footer {
+                font-size: 0.8em;
                 padding: 15px;
             }
+        }
+
+        @media (max-width: 480px) {
             h1 {
                 font-size: 1.5em;
+            }
+            .menu-item {
+                font-size: 0.8em;
+                padding: 12px;
             }
         }
     </style>
 </head>
 <body>
+    <div class="soundwave-bg"></div>
     <div class="menu-container">
         <h1>Sound Synths</h1>
-        <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth">Game Synth</a>
-        <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth">Drone Synth</a>
-        <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth">Cloud Synth</a>
-        <a href="http://soundsynths.netlify.app/808AI.html" title="808AI Synth">808AI Synth</a>
+        <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth" class="menu-item">Game Synth</a>
+        <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth" class="menu-item">Drone Synth</a>
+        <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
+        <a href="http://soundsynths.netlify.app/808AI.html" title="808AI Synth" class="menu-item">808AI Synth</a>
         <div class="glow-effect"></div>
     </div>
+    <footer>
+        <p>&copy; <span id="year"></span> SoundSynths. All Rights Reserved.</p>
+    </footer>
+    <script>
+        // Dynamic Copyright Year
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
