--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth" class="menu-item">Game Synth</a>
         <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth" class="menu-item">Drone Synth</a>
         <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
-        <a href="http://soundsynths.netlify.app/808AI.html" title="808AI Synth" class="menu-item">808AI Synth</a>
+        <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI Synth" class="menu-item">808AI Synth</a>
         <div class="glow-effect"></div>
     </div>
     <footer>
