--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
     <div class="soundwave-bg"></div>
     <div class="menu-container">
         <h1>Sound Synths</h1>
-        <a href="http://soundsynths.netlify.app/sound.html" title="Game Synth" class="menu-item">Game Synth</a>
+        <a href="http://soundsynths.netlify.app/sound.html" title="Mythical Synth" class="menu-item"> Mythical Synth</a>
         <a href="http://soundsynths.netlify.app/sound5.html" title="Drone Synth" class="menu-item">Drone Synth</a>
-        <a href="http://soundsynths.netlify.app/sound8.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
         <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI Synth" class="menu-item">808AI Synth</a>
         <div class="glow-effect"></div>
     </div>
