--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
         <a href="http://soundsynths.netlify.app/dronesynth.html" title="Drone Synth" class="menu-item">Drone Synth</a>
         <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI Synth" class="menu-item">808AI Synth</a>
         <a href="http://soundsynths.netlify.app/cloudsynth.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
+        <a href="http://soundsynths.netlify.app/about.html" title="About" class="menu-item">About Sound Synths</a>
         <div class="glow-effect"></div>
     </div>
     <footer>
