--- a/dronesynth.html
+++ b/dronesynth.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-    <h1>Dungeon Drone Synth</h1>
+    <h1>Drone Synth</h1>
     <div class="container">
         <div class="drum-rack">
             <h2>Ambient Pads & Drone Loops</h2>
