--- a/m2.html
+++ b/m2.html
@@ -108,14 +108,16 @@
         .synth-keys-container {
             overflow-x: auto;
             padding-bottom: 4px;
+            scroll-behavior: smooth;
+            width: 100%;
         }
         .synth-keys {
             display: flex;
-            height: 90px;
+            height: 100px;
             min-width: fit-content;
         }
         .key {
-            flex: 0 0 26px;
+            flex: 0 0 32px;
             height: 100%;
             border: 1px solid #00ffcc;
             cursor: pointer;
@@ -126,15 +128,15 @@
             background: linear-gradient(#e6e6fa, #b0b0cc);
         }
         .black {
-            flex: 0 0 15px;
-            height: 55px;
+            flex: 0 0 18px;
+            height: 60px;
             background: linear-gradient(#2e2e47, #1a1a2e);
-            margin: 0 -7.5px;
+            margin: 0 -9px;
             position: relative;
             z-index: 1;
         }
-        .key:hover, .key:focus {
-            background: #00ffcc;
+        .key:hover, .key:focus, .key.active {
+            background: #ff00ff;
         }
         .key:active {
             background: #ff00ff;
@@ -219,6 +221,16 @@
             text-shadow: 0 0 2px #ff00ff;
             z-index: 10;
         }
+        ::-webkit-scrollbar {
+            height: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #1a1a2e;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #00ffcc;
+            border-radius: 4px;
+        }
         @media (max-width: 600px) {
             .wrapper {
                 padding: 8px;
@@ -227,14 +239,14 @@
                 grid-template-columns: repeat(auto-fit, minmax(45px, 1fr));
             }
             .key {
-                flex: 0 0 22px;
+                flex: 0 0 28px;
             }
             .black {
-                flex: 0 0 12px;
-                margin: 0 -6px;
+                flex: 0 0 14px;
+                margin: 0 -7px;
             }
             .synth-keys {
-                height: 70px;
+                height: 80px;
             }
             .xy-grid {
                 width: 55px;
@@ -267,7 +279,7 @@
         </div>
 
         <div class="synth-keys-container">
-            <h2>Celestial Keys (C3-C5)</h2>
+            <h2>Celestial Keys (C1-C7)</h2>
             <select id="keyboard-type">
                 <option value="organ">Organ</option>
                 <option value="harpsichord">Harpsichord</option>
@@ -303,8 +315,8 @@
                     <option value="forest">Enchanted Forest</option>
                 </select>
                 <div class="bpm-selector">
-                    <label for="bpm">BPM: <span id="bpm-value">80</span></label>
-                    <input type="range" id="bpm" min="40" max="160" value="80">
+                    <label for="bpm">BPM: <span id="bpm-value">75</span></label>
+                    <input type="range" id="bpm" min="50" max="100" value="75">
                 </div>
                 <div class="xy-grid" id="xy-grid">
                     <div class="xy-cursor" id="xy-cursor"></div>
@@ -341,7 +353,7 @@
         let isArpActive = false;
         let intervalId = null;
         let arpIntervalId = null;
-        let currentBPM = 80;
+        let currentBPM = 75;
 
         // Reverb Setup
         function setupReverb() {
@@ -459,8 +471,20 @@
             oscillator.stop(audioContext.currentTime + 1.2);
         }
 
-        // Keyboard Setup (C3-C5)
+        // Keyboard Setup (C1-C7)
         const keys = [
+            { note: 'C1', freq: 32.70, type: 'white' }, { note: 'C#1', freq: 34.65, type: 'black' },
+            { note: 'D1', freq: 36.71, type: 'white' }, { note: 'D#1', freq: 38.89, type: 'black' },
+            { note: 'E1', freq: 41.20, type: 'white' }, { note: 'F1', freq: 43.65, type: 'white' },
+            { note: 'F#1', freq: 46.25, type: 'black' }, { note: 'G1', freq: 49.00, type: 'white' },
+            { note: 'G#1', freq: 51.91, type: 'black' }, { note: 'A1', freq: 55.00, type: 'white' },
+            { note: 'A#1', freq: 58.27, type: 'black' }, { note: 'B1', freq: 61.74, type: 'white' },
+            { note: 'C2', freq: 65.41, type: 'white' }, { note: 'C#2', freq: 69.30, type: 'black' },
+            { note: 'D2', freq: 73.42, type: 'white' }, { note: 'D#2', freq: 77.78, type: 'black' },
+            { note: 'E2', freq: 82.41, type: 'white' }, { note: 'F2', freq: 87.31, type: 'white' },
+            { note: 'F#2', freq: 92.50, type: 'black' }, { note: 'G2', freq: 98.00, type: 'white' },
+            { note: 'G#2', freq: 103.83, type: 'black' }, { note: 'A2', freq: 110.00, type: 'white' },
+            { note: 'A#2', freq: 116.54, type: 'black' }, { note: 'B2', freq: 123.47, type: 'white' },
             { note: 'C3', freq: 130.81, type: 'white' }, { note: 'C#3', freq: 138.59, type: 'black' },
             { note: 'D3', freq: 146.83, type: 'white' }, { note: 'D#3', freq: 155.56, type: 'black' },
             { note: 'E3', freq: 164.81, type: 'white' }, { note: 'F3', freq: 174.61, type: 'white' },
@@ -473,8 +497,51 @@
             { note: 'F#4', freq: 369.99, type: 'black' }, { note: 'G4', freq: 392.00, type: 'white' },
             { note: 'G#4', freq: 415.30, type: 'black' }, { note: 'A4', freq: 440.00, type: 'white' },
             { note: 'A#4', freq: 466.16, type: 'black' }, { note: 'B4', freq: 493.88, type: 'white' },
-            { note: 'C5', freq: 523.25, type: 'white' }
+            { note: 'C5', freq: 523.25, type: 'white' }, { note: 'C#5', freq: 554.37, type: 'black' },
+            { note: 'D5', freq: 587.33, type: 'white' }, { note: 'D#5', freq: 622.25, type: 'black' },
+            { note: 'E5', freq: 659.25, type: 'white' }, { note: 'F5', freq: 698.46, type: 'white' },
+            { note: 'F#5', freq: 739.99, type: 'black' }, { note: 'G5', freq: 783.99, type: 'white' },
+            { note: 'G#5', freq: 830.61, type: 'black' }, { note: 'A5', freq: 880.00, type: 'white' },
+            { note: 'A#5', freq: 932.33, type: 'black' }, { note: 'B5', freq: 987.77, type: 'white' },
+            { note: 'C6', freq: 1046.50, type: 'white' }, { note: 'C#6', freq: 1108.73, type: 'black' },
+            { note: 'D6', freq: 1174.66, type: 'white' }, { note: 'D#6', freq: 1244.51, type: 'black' },
+            { note: 'E6', freq: 1318.51, type: 'white' }, { note: 'F6', freq: 1396.91, type: 'white' },
+            { note: 'F#6', freq: 1479.98, type: 'black' }, { note: 'G6', freq: 1567.98, type: 'white' },
+            { note: 'G#6', freq: 1661.22, type: 'black' }, { note: 'A6', freq: 1760.00, type: 'white' },
+            { note: 'A#6', freq: 1864.66, type: 'black' }, { note: 'B6', freq: 1975.53, type: 'white' },
+            { note: 'C7', freq: 2093.00, type: 'white' }
         ];
+
+        // Desktop Keyboard Mapping (C4 octave as default)
+        const keyMap = {
+            'z': 261.63, // C4
+            's': 277.18, // C#4
+            'x': 293.66, // D4
+            'd': 311.13, // D#4
+            'c': 329.63, // E4
+            'v': 349.23, // F4
+            'g': 369.99, // F#4
+            'b': 392.00, // G4
+            'h': 415.30, // G#4
+            'n': 440.00, // A4
+            'j': 466.16, // A#4
+            'm': 493.88, // B4
+            ',': 523.25, // C5
+            'q': 554.37, // C#5
+            '2': 587.33, // D5
+            'w': 622.25, // D#5
+            'e': 659.25, // E5
+            'r': 698.46, // F5
+            '5': 739.99, // F#5
+            't': 783.99, // G5
+            '6': 830.61, // G#5
+            'y': 880.00, // A5
+            '7': 932.33, // A#5
+            'u': 987.77 // B5
+        };
+
+        let octaveShift = 0; // 0 = C4 octave, +1 = C5, -1 = C3, etc.
+        const pressedKeys = new Set();
 
         function renderKeyboard() {
             const synthKeys = document.getElementById('synth-keys');
@@ -483,17 +550,63 @@
                 const div = document.createElement('div');
                 div.className = `key ${key.type}`;
                 div.dataset.note = key.freq;
-                div.addEventListener('click', () => playSynth(key.freq, document.getElementById('keyboard-type').value));
+                div.addEventListener('click', () => {
+                    playSynth(key.freq, document.getElementById('keyboard-type').value);
+                    div.classList.add('active');
+                    setTimeout(() => div.classList.remove('active'), 100);
+                });
                 div.addEventListener('touchstart', (e) => {
                     e.preventDefault();
                     playSynth(key.freq, document.getElementById('keyboard-type').value);
+                    div.classList.add('active');
+                    setTimeout(() => div.classList.remove('active'), 100);
                 });
                 synthKeys.appendChild(div);
             });
         }
         renderKeyboard();
 
-        // Manual Play
+        // Desktop Keyboard Input
+        document.addEventListener('keydown', (e) => {
+            if (e.repeat || pressedKeys.has(e.key)) return;
+            pressedKeys.add(e.key);
+
+            if (e.key === 'Shift') {
+                octaveShift = 1;
+                return;
+            }
+            if (e.key === 'Control') {
+                octaveShift = -1;
+                return;
+            }
+
+            const baseFreq = keyMap[e.key.toLowerCase()];
+            if (baseFreq) {
+                const shiftedFreq = baseFreq * Math.pow(2, octaveShift);
+                const keyElement = document.querySelector(`.key[data-note="${shiftedFreq}"]`);
+                if (keyElement) {
+                    playSynth(shiftedFreq, document.getElementById('keyboard-type').value);
+                    keyElement.classList.add('active');
+                }
+            }
+        });
+
+        document.addEventListener('keyup', (e) => {
+            pressedKeys.delete(e.key);
+            if (e.key === 'Shift' || e.key === 'Control') {
+                octaveShift = 0;
+            }
+            const baseFreq = keyMap[e.key.toLowerCase()];
+            if (baseFreq) {
+                const shiftedFreq = baseFreq * Math.pow(2, octaveShift);
+                const keyElement = document.querySelector(`.key[data-note="${shiftedFreq}"]`);
+                if (keyElement) {
+                    keyElement.classList.remove('active');
+                }
+            }
+        });
+
+        // Manual Play (Drum Pads)
         document.querySelectorAll('.drum-pad').forEach(pad => {
             pad.addEventListener('click', () => playDrum(pad.dataset.note));
             pad.addEventListener('touchstart', (e) => {
@@ -512,7 +625,7 @@
         const bpmValue = document.getElementById('bpm-value');
         const drumTypes = ['astral-wave', 'gong', 'chime', 'crystal-shard', 'deep-bell', 'chain', 'scream', 'ethereal-pulse'];
 
-        // A Minor Scale (C3 to C5 subset)
+        // A Minor Scale (C3 to C5 subset for arpeggiator)
         const aMinorScale = [
             130.81, 146.83, 155.56, 174.61, 196.00, 207.65, 233.08,
             261.63, 293.66, 311.13, 349.23, 392.00, 415.30, 466.16,
@@ -565,9 +678,9 @@
         }
 
         const songs = {
-            dungeon: { bpm: 80, density: 0.5, arpMode: 'long' },
+            dungeon: { bpm: 75, density: 0.5, arpMode: 'long' },
             crypt: { bpm: 60, density: 0.4, arpMode: 'random' },
-            forest: { bpm: 100, density: 0.6, arpMode: 'up-down' }
+            forest: { bpm: 85, density: 0.6, arpMode: 'up-down' }
         };
 
         autoplayButton.addEventListener('click', () => {
