--- a/808ai4.html
+++ b/808ai4.html
@@ -176,7 +176,7 @@
         <canvas id="waveform"></canvas>
     </section>
     <footer>
-        <p>© 2025 808AI. All rights reserved.</p>
+        <p>© 2025 Soundsynths. All rights reserved.</p>
     </footer>
     <script>
         // Web Audio API Setup
