--- a/d2.html
+++ b/d2.html
@@ -29,19 +29,18 @@
             font-family: 'Courier New', monospace;
             background: #000;
             color: #fff;
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
             overflow: hidden;
         }
 
         h1 {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             text-shadow: 0 0 5px #fff;
             letter-spacing: 2px;
             text-align: center;
-            padding: 10px 0;
-            margin: 0;
+            padding: 8px 0;
         }
 
         .container {
@@ -50,18 +49,18 @@
             max-width: 100vw;
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            padding: 10px;
+            gap: 8px;
+            padding: 8px;
         }
 
         .visualizer {
-            width: 200px;
-            height: 200px;
+            width: 150px;
+            height: 150px;
             margin: 0 auto;
             background: rgba(10, 10, 10, 0.9);
             border: 2px solid #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #fff, inset 0 0 5px rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            box-shadow: 0 0 8px #fff, inset 0 0 4px rgba(255, 255, 255, 0.2);
             position: relative;
             overflow: hidden;
             background-image: linear-gradient(
@@ -82,14 +81,14 @@
         .visualizer::before {
             content: '';
             position: absolute;
-            width: 10px;
-            height: 10px;
+            width: 8px;
+            height: 8px;
             background: #f00;
             border-radius: 50%;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            box-shadow: 0 0 10px #f00;
+            box-shadow: 0 0 8px #f00;
         }
 
         canvas {
@@ -101,38 +100,38 @@
         .drum-rack, .controls {
             background: rgba(10, 10, 10, 0.9);
             border: 2px solid #fff;
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0 0 10px #fff, inset 0 0 5px rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            padding: 8px;
+            box-shadow: 0 0 8px #fff, inset 0 0 4px rgba(255, 255, 255, 0.2);
             transition: all 0.3s ease;
         }
 
         .drum-rack:hover, .controls:hover {
-            box-shadow: 0 0 15px #fff, inset 0 0 10px rgba(255, 255, 255, 0.4);
+            box-shadow: 0 0 12px #fff, inset 0 0 8px rgba(255, 255, 255, 0.4);
         }
 
         h2 {
-            font-size: 0.9rem;
-            margin: 0 0 8px 0;
+            font-size: 0.7rem;
+            margin: 0 0 6px 0;
             color: #fff;
             text-shadow: 0 0 3px #fff;
         }
 
         .drum-pads {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 8px;
+            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+            gap: 6px;
         }
 
         .drum-pad {
             background: #1a1a1a;
             color: #fff;
             border: 1px solid #fff;
-            border-radius: 5px;
-            padding: 8px;
+            border-radius: 4px;
+            padding: 4px;
             text-align: center;
             cursor: pointer;
-            font-size: 0.7rem;
+            font-size: 0.35rem;
             transition: all 0.2s ease;
             touch-action: manipulation;
         }
@@ -140,7 +139,7 @@
         .drum-pad:hover {
             background: #fff;
             color: #000;
-            box-shadow: 0 0 10px #fff;
+            box-shadow: 0 0 8px #fff;
         }
 
         .drum-pad:active {
@@ -150,17 +149,17 @@
 
         .controls {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 8px;
+            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            gap: 6px;
         }
 
         button, select, input[type="range"] {
             background: #1a1a1a;
             color: #fff;
             border: 1px solid #fff;
-            border-radius: 5px;
-            padding: 6px;
-            font-size: 0.7rem;
+            border-radius: 4px;
+            padding: 4px;
+            font-size: 0.35rem;
             cursor: pointer;
             transition: all 0.2s ease;
             touch-action: manipulation;
@@ -169,7 +168,7 @@
         button:hover, select:hover, input[type="range"]:hover {
             background: #fff;
             color: #000;
-            box-shadow: 0 0 10px #fff;
+            box-shadow: 0 0 8px #fff;
         }
 
         #arp-toggle.active {
@@ -179,27 +178,35 @@
 
         footer {
             text-align: center;
-            font-size: 0.7rem;
-            padding: 10px 0;
+            font-size: 0.6rem;
+            padding: 8px 0;
             color: #ccc;
         }
 
         @media (max-width: 400px) {
             h1 {
-                font-size: 1.2rem;
-            }
-            .drum-pads {
-                grid-template-columns: repeat(2, 1fr);
-            }
-            .controls {
-                grid-template-columns: 1fr;
-            }
-            .drum-pad, button, select, input[type="range"] {
-                font-size: 0.65rem;
-                padding: 5px;
+                font-size: 1rem;
             }
             h2 {
-                font-size: 0.8rem;
+                font-size: 0.6rem;
+            }
+            .drum-pads {
+                grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+            }
+            .controls {
+                grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+            }
+            .drum-pad, button, select, input[type="range"] {
+                font-size: 0.325rem;
+                padding: 3px;
+            }
+            .visualizer {
+                width: 120px;
+                height: 120px;
+            }
+            .visualizer::before {
+                width: 6px;
+                height: 6px;
             }
         }
     </style>
@@ -303,8 +310,8 @@
 
         const canvas = document.getElementById('visualizer-canvas');
         const ctx = canvas.getContext('2d');
-        canvas.width = 200;
-        canvas.height = 200;
+        canvas.width = 150;
+        canvas.height = 150;
         const bufferLength = analyser.frequencyBinCount;
         const dataArray = new Uint8Array(bufferLength);
         const history = [];
@@ -318,9 +325,9 @@
             ctx.fillStyle = 'rgba(0, 0, 0, 0.8)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            const barWidth = canvas.width / 20;
-            for (let i = 0; i < 20; i++) {
-                const index = Math.floor((i / 20) * bufferLength);
+            const barWidth = canvas.width / 15;
+            for (let i = 0; i < 15; i++) {
+                const index = Math.floor((i / 15) * bufferLength);
                 const v = dataArray[index] / 128.0;
                 const barHeight = v * canvas.height * 0.5;
 
